Work on LoginOrSignup to addUser and backend tests of userService
